# ProjecteWeb_Activity

./: .gitignore  README.md
ProjecteWeb/: Dockerfile  README.md  db.sqlite3  entrypoint.sh  pyproject.toml  requirements.txt
ProjecteWeb/config/: settings.py
ProjecteWeb/scripts/: fetch_data.py
ProjecteWeb/scripts/API/: UN_OFFICIAL.py
ProjecteWeb/scripts/unofficial/: import_agents.py  import_cosmetics.py  import_maps.py
ProjecteWeb/tests/e2e/features/: agent_comments.feature  environment.py  login.feature  navigation.feature  register.feature
ProjecteWeb/tests/e2e/features/steps/: agent_comments_steps.py  login_steps.py  navigation_steps.py  register_steps.py
ProjecteWeb/web/: admin.py  models.py  urls.py  views.py
ProjecteWeb/web/migrations/: 0001_initial.py  0002_alter_agent_developername.py  0003_alter_agent_role.py  0004_map_path.py  0005_agentcomment.py  0006_alter_agentcomment_user.py  0007_alter_agentcomment_user.py
ProjecteWeb/web/static/css/: style.css
ProjecteWeb/web/static/css/agents/: agent_details.css  agent_roles.css  role_agents.css
ProjecteWeb/web/static/css/main/: style.css
ProjecteWeb/web/templates/agents/: agent_details.html  agent_roles.html  all.html  edit_comment.html  role_agents.html
ProjecteWeb/web/templates/auth/: login.html  register.html
ProjecteWeb/web/templates/main/: base.html  home.html
ProjecteWeb/web/templates/maps/: map_detail.html  maps.html
