[project]
name = "projecteweb"
version = "0.1.0"
description = ""
authors = [
    {name = "Marc \"Jakon\" Lapeña",email = "jakoncoach@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
selenium = "^4.32.0"
behave = "^1.2.6"
splinter = "^0.21.0"

